# wut

./: _2displaylist_8h.html  _2displaylist_8h_source.html  _2draw_8h.html  _2draw_8h_source.html  _2surface_8h.html  _2surface_8h_source.html  ac_8h.html  ac_8h_source.html  ac__c_8h.html  ac__c_8h_source.html  ac__cpp_8h.html  ac__cpp_8h_source.html  alarm_8h.html  alarm_8h_source.html  annotated.html  atomic64_8h.html  atomic64_8h_source.html  atomic_8h.html  atomic_8h_source.html  buffer_8h.html  buffer_8h_source.html  cache_8h.html  cache_8h_source.html  classes.html  classnn_1_1Result.html  clear_8h.html  clear_8h_source.html  condition_8h.html  condition_8h_source.html  coreinit_2context_8h.html  coreinit_2context_8h_source.html  coreinit_2core_8h.html  coreinit_2core_8h_source.html  coreinit_2debug_8h.html  coreinit_2debug_8h_source.html  coreinit_2event_8h.html  coreinit_2event_8h_source.html  coreinit_8dox.html  coroutine_8h.html  coroutine_8h_source.html  (+458 more)
samples/cmake/console/: CMakeLists.txt  console.c  console.h  console_colour.c  console_colour.h  console_font.c  console_font.h  main.c
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_b.js  defines_b.js  enums_0.js  enums_2.js  enumvalues_0.js  enumvalues_2.js  enumvalues_5.js  files_0.js  files_10.js  files_3.js  files_b.js  files_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_13.js  (+27 more)
(+10 files in other folders)
